loco-gen/tests/templates/snapshots/inject[test_mod]@Api_scaffold.snap
---
source: loco-gen/tests/templates/scaffold.rs
expression: "fs::read_to_string(tests_path.join(\"mod.rs\")).expect(\"Failed to read mod.rs\")"
---

mod posts;
