loco-gen/tests/templates/snapshots/inject[tests_controller_mod_rs]@Api_controller.snap
---
source: loco-gen/tests/templates/controller.rs
expression: "fs::read_to_string(test_controllers_path.join(\"mod.rs\")).expect(\"test mod.rs missing\")"
---
pub mod movie;
