loco-gen/tests/templates/snapshots/inject[views_mod_rs]@Htmx_scaffold.snap
---
source: loco-gen/tests/templates/scaffold.rs
expression: "fs::read_to_string(base_views_path.join(\"mod.rs\")).expect(\"Failed to read mod.rs\")"
---
pub mod movie;
